...
    <string name="open_nav_drawer">Home</string> <!-- refactor? -->
    <string name="ButtonText_SignIn">Sign In</string>
    <string name="ButtonText_RegisterAccount">Create New Account</string>
    <string name="TextView_NoAccount">Enter details to create new account</string>
    <string name="TextView_WelcomeBack">We missed you, sign in below!</string>
    <string name="loginSuccess">We\'re logging you in!</string>
    <string name="loginFailure">Invalid username or password.</string>
    <string name="ButtonText_SignOut">Sign Out</string>
    <string name="accountCreated">Account created.</string>
    <string name="accountNotCreated">Cannot create account.</string>
    <string name="activity_main_motivational_text">\"I don\'t think limits\"</string>
    <string name="activity_main_motivational_text_author">- Usain Bolt</string>
    <string name="activity_main_featured_text">Run Now.</string>
    <string name="activity_main_user_information">User Info</string>
    <string name="activity_main_maps">Maps</string>
    <string name="activity_main_teams">Teams</string>
...
    <!--These strings are for the record, now maps, activity-->
    <string name="activity_maps_navigation_record_button">Record</string>
    <string name="activity_maps_navigation_pause_button">Pause</string>
    <string name="activity_maps_firebase">recorded_workouts/%s</string>
    <string name="activity_maps_firebase_user_locs">user_locations</string>
    <string name="activity_maps_save_dialog">Do you want to save this workout?</string>
    <string name="activity_maps_yes">Yes</string>
    <string name="activity_maps_no">No</string>

    <string name="logout_while_offline_warning">You have locally saved data.</string>
    <string name="logout_while_offline_warning_save">Save and quit</string>
    <string name="logout_while_offline_warning_quit">Quit</string>
    <string name="submitChanges">Submit Changes</string>

...
    <string name="action_join_team">Join a team</string>
    <string name="action_create_team">Create a team</string>
    <string name="search_team_name_hint">Enter team name...</string>

    <!-- Team details menu options -->
    <string name="action_transfer_ownership">Transfer Ownership</string>
    <string name="action_invite_user">Invite new member</string>
    <string name="action_edit_team">Edit team</string>
    <string name="your_team_name">Your Team Name</string>
    <string name="your_team_motto">Your team motto</string>
    <string name="team_members">Team Members</string>
    <string name="name">Name</string>
    <string name="last_online">last online:</string>
    <string name="search_for_team_members_hint">Search other users</string>
...
